# grafana-weaver

./: .gitignore  LICENSE  README.md  download-dashboards.sh  extract_external_content.py  pyproject.toml  upload-dashboards.sh
.github/workflows/: publish.yml  test.yml
src/grafana_weaver/: __init__.py  config.py  download_dashboards.py  extract_external_content.py  main.py  upload_dashboards.py  utils.py
src/grafana_weaver/core/: __init__.py  client.py  config_manager.py  dashboard_downloader.py  dashboard_extractor.py  jsonnet_builder.py
terraform_module/: README.md  export-dashboards.tf  import-dashboards.tf  main.tf  outputs.tf  variables.tf
tests/: __init__.py  conftest.py  test_cli_config.py  test_config_manager.py  test_download_dashboards.py  test_extract_external_content.py  test_main.py  test_upload_dashboards.py  test_utils.py
tests/test_data/basic_extraction/: expected.jsonnet  input.json
tests/test_data/basic_extraction/assets/: test-basic-1-script.js
tests/test_data/cli_with_external/: input.json
tests/test_data/cli_with_subdir/: input.json
tests/test_data/cli_without_external/: input.json
tests/test_data/comment_preservation/: expected.jsonnet  input.json
tests/test_data/comment_preservation/assets/: test-comments-1-rawSql.sql
tests/test_data/concatenated_external/: expected.jsonnet  input.json
tests/test_data/concatenated_external/assets/: colors.js  utils.js
tests/test_data/conflict_detection/: input.json
tests/test_data/custom_filename/: expected.jsonnet  input.json
tests/test_data/custom_filename/assets/: shared-utils.js
tests/test_data/download_dashboards/: sample_dashboard.json
tests/test_data/filename_starts_with_digit/: expected.jsonnet  input.json
tests/test_data/filename_starts_with_digit/assets/: 123-config.js
tests/test_data/jsonnet_to_json/: expected.json  input.jsonnet
tests/test_data/jsonnet_to_json/input_assets/: panel-script.js  query.sql
tests/test_data/parameterized_filename/: expected.jsonnet  input.json
tests/test_data/parameterized_filename/assets/: test-params-custom-config.js
tests/test_data/same_content_multiple_panels/: input.json
