[project]
name = "grafana-weaver"
version = "0.1.0"
description = "A system for managing Grafana dashboards as code using Jsonnet"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Rhiza Research", email = "info@rhizaresearch.org"}
]
keywords = ["grafana", "dashboards", "jsonnet", "terraform", "infrastructure-as-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "python-terraform>=0.10.1",
    "genson>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/rhiza-research/grafana-weaver"
Repository = "https://github.com/rhiza-research/grafana-weaver"
Issues = "https://github.com/rhiza-research/grafana-weaver/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
upload-dashboards = "grafana_weaver.upload_dashboards:main"
download-dashboards = "grafana_weaver.download_dashboards:main"
extract-external-content = "grafana_weaver.extract_external_content:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grafana_weaver"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=grafana_weaver",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["src/grafana_weaver"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
